<?xml version="1.0"?>
<package format="2">
  <name>ur10e_robotiq_simplified_description</name>
  <version>0.0.0</version>
  <description>The ur10e_robotiq_simplified_description package</description>

  <maintainer email="c.tonola001@unibs.it">cesare</maintainer>

  <license>BSD</license>

  <exec_depend>ur_simplified_description</exec_depend>
  <exec_depend>robotiq_2f_85_gripper_visualization</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
